# swift-agent

./: Dockerfile  README.md  chat_deployed.py  chat_local.py  development.ipynb  langgraph.json  pyproject.toml  test.ipynb  test_render.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
frontend/: chat_deployed.py  package.json  pnpm-lock.yaml  scratch.html
frontend/app/: globals.css  layout.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/threads/[threadId]/state/: route.ts
frontend/app/api/upload/: route.ts
frontend/components/: ChatInput.tsx  ChatShell.tsx  FileUploadItem.tsx  InterruptCard.tsx  MessageBubble.tsx  MessageList.tsx  PlotlyRenderer.tsx  Sidebar.tsx  ToolCallCard.tsx  ToolResultCard.tsx
frontend/components/ui/: ai-input.tsx
frontend/lib/: langgraph.ts  types.ts  utils.ts
swift/: env.py  graph.py  graph2.py  tools.py  upload.py  webapp.py
swift/mcp_servers/: client.py  mcp_config.json  weather.py
swift/prompts/: prompts.py  swift.md
